objects/Learning_Outcome__c.object
<CustomObject><fields>
        <fullName>Entry_Award__c</fullName>
        <inlineHelpText>Which entry awards are applicable to this Aim</inlineHelpText>
        <label>Entry Awards</label>
        <picklist>
            <picklistValues>
                <fullName>All Awards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSc &amp; PGDip Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSc Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Learning_Outcome__c</fullName>
        <label>Learning Outcome</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Mode_of_Assessing__c</fullName>
        <inlineHelpText>Mode of Assessing Achievement of skill or other attribute</inlineHelpText>
        <label>Mode of Assessing</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Modules_Included__c</fullName>
        <inlineHelpText>Modules in which this will be delivered</inlineHelpText>
        <label>Modules Included</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Outcome_Type__c</fullName>
        <label>Outcome Type</label>
        <picklist>
            <picklistValues>
                <fullName>A (Knowledge &amp; Understanding)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B (Cognitive Skills)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C (Practical/Professional Skills)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Programme_Version__c</fullName>
        <label>Programme Version</label>
        <referenceTo>Programme_Version__c</referenceTo>
        <relationshipLabel>Learning Outcomes</relationshipLabel>
        <relationshipName>Specification_Outcomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Record_No__c</fullName>
        <description>Set by workflow</description>
        <inlineHelpText>Leave blank on record creation if automatic numbering is required (set by Workflow)</inlineHelpText>
        <label>No.</label>
        <length>5</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <description>Hidden, populated by workflow and for RSF to Programme Version, for Outcome No workflow</description>
        <label>Type</label>
        <length>5</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Learning Outcome</label><nameField>
        <displayFormat>LO-{000000}</displayFormat>
        <label>Outcome Ref</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Learning Outcomes</pluralLabel><sharingModel>ControlledByParent</sharingModel><validationRules>
        <fullName>Enforce_Outcome_Type_choice</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK ( Text (Outcome_Type__c ))</errorConditionFormula>
        <errorDisplayField>Learning_Outcome__c</errorDisplayField>
        <errorMessage>An Outcome Type must be given</errorMessage>
    </validationRules></CustomObject>